--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mime-types": "^2.1.31",
     "moment-timezone": "^0.5.33",
     "node-cron": "^3.0.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch"
     "qrcode": "^1.4.4",
     "socket.io": "^4.1.2",
     "spinnies": "^0.5.1",
