--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@adiwajshing/baileys": "^3.5.1",
+    "@adiwajshing/baileys": "^3.5.2",
     "axios": "^0.21.1",
-    "chalk": "^4.1.2",
     "child_process": "^1.0.2",
     "express": "^4.17.1",
     "file-type": "^16.5.0",
@@ -17,13 +16,15 @@
     "mime-types": "^2.1.31",
     "moment-timezone": "^0.5.33",
     "node-cron": "^3.0.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "qrcode": "^1.4.4",
     "socket.io": "^4.1.2",
     "spinnies": "^0.5.1",
     "yargs": "^17.0.1"
   },
-  "devDependencies": {},
+  "engines": {
+    "node": "16.6.1"
+  },
   "scripts": {
     "start": "node ."
   },
