--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
     "XTkey": "MIMINETBOT",
     "BxKey": "Ikyy69",
 	"autoRead": true,
+	"self": false, 
 	"maxLimit": 20,
 	"ownerList": ["6282248192917@s.whatsapp.net", "628114811363@s.whatsapp.net"],
 	"imgUrl": "https://api.zeks.xyz/logo.jpg",
