--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
 	"maxLimit": 20,
 	"ownerList": ["6282248192917@s.whatsapp.net", "628114811363@s.whatsapp.net"],
 	"imgUrl": "https://api.zeks.xyz/logo.jpg",
-	"apiUrl": "https://api.zeks.xyz",
+	"apiUrl": "https://api.zeks.me",
 	"lolUrl": "https://api.lolhuman.xyz",
 	"xteamUrl": "https://api.xteam.xyz",
 	"dapUrl": "https://dapuhy-api.herokuapp.com",
