--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-type": "^16.5.0",
     "form-data": "^4.0.0",
     "mime-types": "^2.1.31",
+    "performance-now": "^2.1.0", 
     "moment-timezone": "^0.5.33",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
