パ ワ ー「button mess, change style menu n other」

--- a/config.json
+++ b/config.json
@@ -22,6 +22,6 @@
 	"leysUrl": "https://leyscoders-api.herokuapp.com",
 	"chipaUrl": "https://api.chipa.xyz",
 	"janUrl": "https://janbot-api.herokuapp.com",
-	"pack": "My Sticker",
-	"author": "wm: pawa-chan"
+	"pack": "ㅤ",
+	"author": "ㅤ"
 }
