--- a/config.json
+++ b/config.json
@@ -8,8 +8,9 @@
 	"ChipaKey": "7DVG49XEXTX9CNASCQGX1CXZ",
     "LolKey": "ShiroNeko",
     "DapKey": "DapKece",
-    "XTkey": "MIMINETBOT",
+    "XTkey": "REGISTER",
     "BxKey": "Ikyy69",
+    "h4ckKey": "404Api",
 	"autoRead": false,
 	"self": false,
 	"maxLimit": 20,
@@ -20,6 +21,7 @@
 	"xteamUrl": "https://api.xteam.xyz",
 	"dapUrl": "https://dapuhy-api.herokuapp.com",
 	"leysUrl": "https://leyscoders-api.herokuapp.com",
+	"h4ckUrl": "https://h4ck3rs404-api.herokuapp.com",
 	"chipaUrl": "https://api.chipa.xyz",
 	"janUrl": "https://janbot-api.herokuapp.com",
 	"pack": "ㅤ",
