「 bro lu bkn anime kan? 」

--- a/config.json
+++ b/config.json
@@ -1,20 +1,20 @@
 {	
 	"prefix": "multi", 
 	"namaowner": "KhaelSan",
-	"namabot": "Pawa chan",
+	"namabot": "Pawa-chan",
 	"defaultSessionName": "khael", 
 	"zeksKey": "ShiroNeko",
 	"LeysKey": "dappakntlll",
 	"ChipaKey": "7DVG49XEXTX9CNASCQGX1CXZ",
-    "LolKey": "ShiroNeko",
-    "DapKey": "DapKece",
-    "XTkey": "REGISTER",
-    "BxKey": "Ikyy69",
-    "h4ckKey": "404Api",
-	"autoRead": false,
+        "LolKey": "ShiroNeko",
+        "DapKey": "DapGG",
+        "XTkey": "REGISTER",
+        "BxKey": "Ikyy69",
+        "h4ckKey": "404Api",
+	"autoRead": true,
 	"self": false,
 	"maxLimit": 20,
-	"ownerList": ["6282248192917@s.whatsapp.net", "628114811363@s.whatsapp.net"],
+	"ownerList": ["6282248192917@s.whatsapp.net"],
 	"imgUrl": "https://i.ibb.co/2tWRLzq/IMG-20210824-WA0264.jpg",
 	"apiUrl": "https://api.zeks.xyz",
 	"lolUrl": "https://api.lolhuman.xyz",
