--- a/config.json
+++ b/config.json
@@ -5,9 +5,9 @@
 	"defaultSessionName": "khael", 
 	"zeksKey": "ShiroNeko",
 	"LeysKey": "dappakntlll",
-	"ChipaKey": "7DVG49XEXTX9CNASCQGX1CXZ",
+
         "LolKey": "ShiroNeko",
-        "DapKey": "DapGG",
+        "DapKey": "DappaGG",
         "XTkey": "REGISTER",
         "BxKey": "Ikyy69",
         "h4ckKey": "404Api",
@@ -16,13 +16,13 @@
 	"maxLimit": 20,
 	"ownerList": ["6282248192917@s.whatsapp.net"],
 	"imgUrl": "https://i.ibb.co/2tWRLzq/IMG-20210824-WA0264.jpg",
-	"apiUrl": "https://api.zeks.xyz",
+	"apiUrl": "https://api.zeks.me",
 	"lolUrl": "https://api.lolhuman.xyz",
 	"xteamUrl": "https://api.xteam.xyz",
 	"dapUrl": "https://dapuhy-api.herokuapp.com",
 	"leysUrl": "https://leyscoders-api.herokuapp.com",
 	"h4ckUrl": "https://h4ck3rs404-api.herokuapp.com",
-	"chipaUrl": "https://api.chipa.xyz",
+	
 	"janUrl": "https://janbot-api.herokuapp.com",
 	"pack": "ㅤ",
 	"author": "ㅤ"
