--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "performance-now": "^2.1.0", 
     "moment-timezone": "^0.5.33",
     "ms": "^2.1.3",
+    "parse-ms": "^2.1.0",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "qrcode": "^1.4.4",
