--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.2",
     "axios": "^0.21.1",
+    "chalk": "^4.1.2",
     "child_process": "^1.0.2",
     "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
     "file-type": "^16.5.0",
     "form-data": "^4.0.0",
     "mime-types": "^2.1.31",
-    "performance-now": "^2.1.0", 
     "moment-timezone": "^0.5.33",
     "ms": "^2.1.3",
-    "parse-ms": "^2.1.0",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "parse-ms": "^2.1.0",
+    "performance-now": "^2.1.0",
+    "pixiv-img": "1.0.0",
     "qrcode": "^1.4.4",
     "socket.io": "^4.1.2",
     "spinnies": "^0.5.1",
